test-output/src/tests/snapshots/test_output__tests__output__bit_arrays_wide.snap
---
source: test-output/src/tests/output.rs
expression: output
---
--- main.gleam ----------------------
// SPDX-License-Identifier: Apache-2.0
// SPDX-FileCopyrightText: 2026 The Gleam contributors

// Bit array features JavaScript does not support: reads wider than its
// 52-bit integers, and native endianness. Erlang and native share the
// snapshot.

pub fn main() -> Nil {
  // A wide read produces a big integer.
  let assert <<wide:size(128)>> = <<0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0>>
  echo wide == 256
  echo wide

  // Native endianness (little on every supported machine).
  echo <<258:16-native>> == <<258:16-little>>
  Nil
}


--- gleam run output ----------------
[90msrc/main.gleam:11[39m
True
[90msrc/main.gleam:12[39m
256
[90msrc/main.gleam:15[39m
True
