test-output/src/tests/snapshots/test_output__tests__output__erlang-assert_failure.snap
---
source: test-output/src/tests/output.rs
expression: output
---
--- main.gleam ----------------------
// SPDX-License-Identifier: Apache-2.0
// SPDX-FileCopyrightText: 2026 The Gleam contributors

pub fn main() -> Nil {
  assert 1 == 2
  Nil
}


--- gleam run output ----------------
[31;1mruntime error[39m: assert[0m

Assertion failed.

stacktrace:
  main.main[90m src/main.gleam:5[0m
